style: chenge z-index of card to fix it above everthing

--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -109,9 +109,10 @@
 }
 
 .u-wrapper-mask {
+    z-index: 9999;
     height: 100vh;
     width: 100%;
-    backdrop-filter: blur(18px);
+    backdrop-filter: blur(19px);
     background-color: #00000042;
     position: fixed;
     top: 0;
